# deep-learning-api

./: .pre-commit-config.yaml  pyproject.toml  translations.db
api/core/: settings.py
api/db/: db.py
api/models/: models.py
api/schemas/: schemas.py
api/tasks/: tasks.py
api/v1/endpoints/: main.py
src/: main.py  models.py  tasks.py
tests/: test_main.py
