[project]
name = "deep-learning-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "peewee>=3.18.1",
    "pydantic>=2.11.5",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "ruff==0.11.13",
]

[tool.ruff]
src = ["src"]
exclude = [".venv", "venv", "__pycache__"]
line-length = 100

[tool.ruff.lint]
extend-select = ["E","W"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
